# library-recommender

./: .gitignore  README.md  pyproject.toml  requirements.txt
books/: models.py  recommendation.py  serializers.py  tasks.py  views.py
books/management/commands/: load_books_data.py
books/migrations/: 0001_initial.py  0002_series_rename_bio_author_about_remove_book_author_and_more.py
